Modifica della gestione del piano in immobile e refactor iniziale